public/css/list.css
tbody:after {
    content: '';
    display: block;
    height: .25em;
}

.aftercolumn {
    font-size: .85em;
    padding-left: 1em;
    vertical-align: top;
}

.list tr.showme:hover {
    background-color: #FAFAD2;
}

.list tr:hover .actions {
    visibility: visible;
}

.actions {
    visibility: hidden;
    padding-left: 1em;
}

.strikeme {
    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAHklEQVQYV2NkIBIwEqmOgTYK64mxnjZWE2MzDXwNAIJ3AIqzndCYAAAAAElFTkSuQmCC');
    background-repeat: repeat-x;
    background-position: 50% 50%;
/*
    text-decoration: line-through;
*/
}

.nostrike {
    background-image: none;
    /*text-decoration: none;*/
}

#listactions {
    padding-top: 1em;
}

.extrainfo {
    border-bottom: solid 1px #CCCCCC;
}

